working on display box

--- a/index.html
+++ b/index.html
@@ -18,34 +18,39 @@
             <td colspan="3"> <input class="display-box" type="text" id="result" disabled /> </td>
         </div>
         <div class="btn">
-            <div>
-                <td> <input type="button" value="C" onclick="clearScreen()" id="btn" /> </td>
+            <div class="sixth-level">
+                <td> <input class="btn-form" type="button" value="C" onclick="clearScreen()" id="btn" /> </td>
             </div>
-            <tr>
-                <td> <input type="button" value="1" onclick="display('1')" /> </td>
-                <td> <input type="button" value="2" onclick="display('2')" /> </td>
-                <td> <input type="button" value="3" onclick="display('3')" /> </td>
-                <td> <input type="button" value="/" onclick="display('/')" /> </td>
-            </tr>
-            <tr>
-                <td> <input type="button" value="4" onclick="display('4')" /> </td>
-                <td> <input type="button" value="5" onclick="display('5')" /> </td>
-                <td> <input type="button" value="6" onclick="display('6')" /> </td>
-                <td> <input type="button" value="-" onclick="display('-')" /> </td>
-            </tr>
-            <tr>
-                <td> <input type="button" value="7" onclick="display('7')" /> </td>
-                <td> <input type="button" value="8" onclick="display('8')" /> </td>
-                <td> <input type="button" value="9" onclick="display('9')" /> </td>
-                <td> <input type="button" value="+" onclick="display('+')" /> </td>
-            </tr>
-            <tr>
-                <td> <input type="button" value="." onclick="display('.')" /> </td>
-                <td> <input type="button" value="0" onclick="display('0')" /> </td>
-                <td> <input type="button" value="=" onclick="calculate()" id="btn" /> </td>
-                <td> <input type="button" value="*" onclick="display('*')" /> </td>
-            </tr> 
+            <div class="fifth-level">
+                <td> <input class="btn-form" type="button" value="/" onclick="display('/')" /> </td>
+            </div>
+            <div class="fourth-level">
+                <td> <input class="btn-form" type="button" value="7" onclick="display('7')" /> </td>
+                <td> <input class="btn-form" type="button" value="8" onclick="display('8')" /> </td>
+                <td> <input class="btn-form" type="button" value="9" onclick="display('9')" /> </td>
+                <td> <input class="btn-form" type="button" value="-" onclick="display('-')" /> </td>
+            </div>
+            <div class="third-level">
+                <td> <input class="btn-form" type="button" value="4" onclick="display('4')" /> </td>
+                <td> <input class="btn-form" type="button" value="5" onclick="display('5')" /> </td>
+                <td> <input class="btn-form" type="button" value="6" onclick="display('6')" /> </td>
+                <td> <input class="btn-form" type="button" value="+" onclick="display('+')" /> </td>
+            </div>
+            <div class="second-level">
+                <td> <input class="btn-form" type="button" value="1" onclick="display('1')" /> </td>
+                <td> <input class="btn-form" type="button" value="2" onclick="display('2')" /> </td>
+                <td> <input class="btn-form" type="button" value="3" onclick="display('3')" /> </td>
+            </div>
+            
+            <div class="first-level">
+                <td> <input class="btn-form" type="button" value="." onclick="display('.')" /> </td>
+                <td> <input class="btn-form" type="button" value="0" onclick="display('0')" /> </td>
+                <td> <input class="btn-form" type="button" value="*" onclick="display('*')" /> </td>
+            </div> 
         </div>
+    </div>
+    <div class="equal">
+        <td> <input class="btn-equal" type="button" value="=" onclick="calculate()" id="btn" /> </td>
     </div>
 </body>
 </html>
