--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,9 +26,10 @@
             <div colspan="3"> <input class="display-box" type="text" id="result" enabled/> </div>
         </div>
         <!-- here is darkmode and its fine -->
+        
         <div class="darkmode">
             <label class="switch">
-                <input type="checkbox">
+                <input type="checkbox" id="darmodecheck">
                 <span class="slider round"></span>
               </label>
             <p class="darkmode-txt">SWITCH TO DARK THEME</p>
@@ -38,30 +39,30 @@
             <div class="btn-main-1">
                 <button class="btn-form full-yellow-btn">C</button>
                 <button class="btn-form yellow-btn"><i class="fa-solid fa-square-root-variable"></i></button>
-                <button class="btn-form">7</button>
-                <button class="btn-form">4</button>
-                <button class="btn-form">1</button>
-                <button class="btn-form">.</button>
+                <button class="btn-form main-btn">7</button>
+                <button class="btn-form main-btn">4</button>
+                <button class="btn-form main-btn">1</button>
+                <button class="btn-form main-btn">.</button>
                 
             </div>
 
             <div class="btn-main-2">
                 <button class="btn-form yellow-btn">(</button>
                 <button class="btn-form yellow-btn"><i class="fa-solid fa-percent"></i></button>
-                <button class="btn-form">8</button>
-                <button class="btn-form">5</button>
-                <button class="btn-form">2</button>
-                <button class="btn-form">0</button>
+                <button class="btn-form main-btn">8</button>
+                <button class="btn-form main-btn">5</button>
+                <button class="btn-form main-btn">2</button>
+                <button class="btn-form main-btn">0</button>
 
             </div>
 
             <div class="btn-main-3">
                 <button class="btn-form yellow-btn">)</button>
                 <button class="btn-form yellow-btn"><i class="fa-solid fa-plus-minus"></i></button>
-                <button class="btn-form">9</button>
-                <button class="btn-form">6</button>
-                <button class="btn-form">3</button>
-                <button class="btn-form"><i class="fa-solid fa-delete-left"></i></button>
+                <button class="btn-form main-btn">9</button>
+                <button class="btn-form main-btn">6</button>
+                <button class="btn-form main-btn">3</button>
+                <button class="btn-form main-btn"><i class="fa-solid fa-delete-left"></i></button>
 
             </div>
 
