Add darkmode to the project and attached the button to change styles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light" dir="ltr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,12 +28,12 @@
         </div>
         <!-- here is darkmode and its fine -->
         
-        <div class="darkmode">
+        <div id="parentdarklight"class="darkmode">
             <label class="switch">
-                <input type="checkbox" id="darmodecheck">
+                <input type="checkbox" id="dark-mode-check">
                 <span class="slider round"></span>
               </label>
-            <div><p class="darkmode-txt">SWITCH TO DARK THEME</p></div><div><p class="lightmode-txt">SWITCH TO LIGHT MODE</p></div>
+            <div><p id="dark-mode-par" class="darkmode-txt">CHANGE TO DARK MODE</p></div>
         </div>
         <!-- here is the button center, i have to classified each button separate -->
         <div class="btn-main">
