Ready to calculate in JS

--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
         </div>
         <!-- here is console and i have to improve -->
         <div class="console output">
-            <!-- <div colspan="3"> <input class="display-box5" type="text" id="memory" enabled/> </div>
-            <div colspan="3"> <input class="display-box4" type="text" id="memory" enabled/> </div>
-            <div colspan="3"> <input class="display-box3" type="text" id="memory" enabled/> </div>
-            <div colspan="3"> <input class="display-box2" type="text" id="memory" enabled/> </div> -->
             <div data-previous-operand class="display-box2 previous-operand"></div>
             <div data-current-operand class="display-box current-operand"></div>
         </div>
@@ -39,7 +35,7 @@
         <div class="btn-main">
             <div class="btn-main-1">
                 <button data-all-clear class="btn-form full-yellow-btn span-two">C</button>
-                <button class="btn-form yellow-btn"><i class="fa-solid fa-square-root-variable"></i></button>
+                <button data-operation class="btn-form yellow-btn"><i class="fa-solid fa-square-root-variable"></i></button>
                 <button data-number class="btn-form main-btn num">7</button>
                 <button data-number class="btn-form main-btn num">4</button>
                 <button data-number class="btn-form main-btn num">1</button>
