--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
             <div><p id="dark-mode-par" class="darkmode-txt">CHANGE TO DARK MODE</p></div>
         </div>
 
-        <div class="btn-main">
+        <div class="btn-main calculator-keys">
             <div class="btn-main-1 calculator-keys">
                 <button type="button" class="btn-form full-yellow-btn span-two all-clear" value="all-clear">C</button>
                 <!-- square root button -->
-                <button type="button" class="btn-form yellow-btn"><i class="fa-solid fa-square-root-variable"></i></button>
+                <button type="button" class="btn-form yellow-btn operator" value="sqrt"><i class="fa-solid fa-square-root-variable"></i></button>
                 <button type="button" class="btn-form main-btn num" value="7">7</button>
                 <button type="button" class="btn-form main-btn num" value="4">4</button>
                 <button type="button" class="btn-form main-btn num" value="1">1</button>
                 <button type="button" class="btn-form main-btn decimal" value=".">.</button>   
             </div>
 
-            <div class="btn-main-2">
+            <div class="btn-main-2 calculator-keys">
                 <!-- ( button -->
                 <button type="button" class="btn-form yellow-btn">(</button>
                 <!-- % button -->
@@ -54,20 +54,20 @@
 
             </div>
 
-            <div class="btn-main-3">
+            <div class="btn-main-3 calculator-keys">
                 <!-- ) button -->
                 <button type="button" class="btn-form yellow-btn">)</button>
                 <!-- +- button -->
                 <button type="button" class="btn-form yellow-btn"><i class="fa-solid fa-plus-minus"></i></button>
-                <button type="button" class="btn-form main-btn num">9</button>
-                <button type="button" class="btn-form main-btn num">6</button>
-                <button type="button" class="btn-form main-btn num">3</button>
+                <button type="button" class="btn-form main-btn num" value="9">9</button>
+                <button type="button" class="btn-form main-btn num" value="6">6</button>
+                <button type="button" class="btn-form main-btn num" value="3">3</button>
                 <!-- delete button -->
                 <button type="button" class="btn-form main-btn"><i class="fa-solid fa-delete-left"></i></button>
 
             </div>
 
-            <div class="btn-main-4">
+            <div class="btn-main-4 calculator-keys">
                 <button type="button" class="btn-form purple-btn operator" value="*">*</button>
                 <button type="button" class="btn-form purple-btn operator" value="/">/</i></button>
                 <button type="button" class="btn-form purple-btn operator" value="-">-</button>
